Adjustment to connection strings

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DBCS": "Data Source=DESKTOP-8LM0IB9\\SQLEXPRESS; Initial Catalog=PropertyManagementSystem ; Integrated Security=true; TrustServerCertificate=true; "
+    "DBCS": "Server=tcp:property-management-server.database.windows.net,1433;Initial Catalog=propertymanagementsystemdb;Persist Security Info=False;User ID=adminpm;Password=pmdb123@jrc;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "AllowedHosts": "*",
   "JWTSetting": {
