--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,9 @@
               "src/styles.css",
               "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
-            "scripts": [],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "scripts": []
+           
+            
           },
           "configurations": {
             "production": {
